# pyemsi

./: .gitignore  404.html  BUILDING.md  INSTALLATION.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  Untitled-1.ipynb  doc_demos.py  index.html  opensearch.xml  pyproject.toml  requirements.txt  robots.txt  setup.py  sitemap.xml  t.py  test_basic_functionality.py  y.py
.claude/: settings.local.json
.github/agents/: Plan2.agent.md  Plan2026-01.agent.md  Plan2026-02.agent.md
.github/hooks/: auto-format-ruff.json
.github/workflows/: build.yml  windows-packaging.yml
assets/css/: styles.4a80d0f8.css  styles.5d68b33b.css  styles.952a692f.css  styles.b29ee7b8.css  styles.ebbac6b5.css  styles.ec6e40f2.css
assets/js/: 0094ff27.63689a2f.js  00f7072e.054d5f14.js  00f7072e.767ab228.js  00f7072e.88750e98.js  00f7072e.a531c891.js  00f7072e.ef272311.js  00f7072e.ff5b0dee.js  0126eecc.64fa031f.js  0126eecc.7be29918.js  0126eecc.995287ae.js  0126eecc.babb5fd3.js  0126eecc.c9b7bbcf.js  0126eecc.fb7e6b89.js  040c3e9f.26cbbd30.js  040c3e9f.3b2bc9d9.js  0560ece8.47e6b595.js  0560ece8.b7ab1416.js  07ac7079.093e4595.js  07ac7079.753a886f.js  07ac7079.a8234c26.js  0c4482fc.a05daa45.js  0d5b629d.6111b044.js  0d5b629d.dc81eeb1.js  1039.c0c3cbaf.js  1124.65aca3d4.js  1142.b812b083.js  115.ec0ce5c6.js  1195.e7e5e79b.js  124ad8ce.10d479cc.js  124ad8ce.59d2a247.js  124ad8ce.73cd4c1f.js  128.188b2060.js  1299.b68898bc.js  1387.c2d57ca3.js  14c5e387.54778836.js  14c5e387.d88c30b4.js  14c5e387.f37f0da0.js  14eb3368.3d77d331.js  15e69589.10787d14.js  15e69589.1cb5c05b.js  (+433 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
demos/: installation.html  ipm_motor.html  plotter.html  set_scalar1.html  set_vector.html
dev_docs/: architecture.md  codebase.md  femap.md  femap_file_format.md  femap_to_vtm_plan.md  femap_to_vtu_plan.md  property_tree_widget.md  vtk.md
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vitest.config.ts
examples/: convert_femap.py
input-control-file-editor/: index.html
installer/: pyemsi.nsi
markdown-page/: index.html
pyemsi/: FemapConverter.py  __init__.py  __init__.pyi  block_visibility_dialog.py  cell_query_dialog.py  color_utils.py  display_settings_dialog.py  explorer_widget.py  femap_parser.pxd  femap_parser.py  femap_parser.pybak  femap_parser.pyx  femap_parser_bak.py  femap_to_vtm.py  femap_to_vtu.py  pick_result_history_dialog.py  plotter.py  point_query_dialog.py  property_delegate.py  property_tree_widget.py  qt_window.py  sample_arcs_dialog.py  sample_lines_dialog.py  scalar_bar_settings_dialog.py  split_container.py
pyemsi/core/: __init__.py  femap_parser.c  femap_parser.pxd  femap_parser.pyx  femap_parser_bak.py
pyemsi/examples/: __init__.py  ipm_motor.pvd  transient.pvd
pyemsi/gui/: __init__.py  __main__.py  emsolution_output_plot_builder_dialog.py  external_terminal_dock.py  femap_converter_dialog.py  field_plot_builder_dialog.py  file_viewers.py  ipython_terminal_widget.py  main_window.py  source_to_femap_dialog.py  terminal_widget.py  update_checker.py  update_dialog.py
pyemsi/io/: __init__.py  __init__.pyi  _emsolution_output.py
pyemsi/plotter/: __init__.py  __init__.pyi  animation_export_dialog.py  block_visibility_dialog.py  camera_position_dialog.py  cell_query_dialog.py  (+12 more)
pyemsi_gui/: __init__.py  __main__.py
remotion/: .gitignore  lint_output.txt
search/: index.html
tests/: __init__.py  test_build_windows_private_runtime.py  test_camera_position_dialog.py  test_clim_preservation.py  test_emsolution_output_plot_data.py  test_emsolution_output_plot_dialog.py  test_external_file_change_handling.py  test_feature_edge_loop_filter.py  test_femap_converter_dialog.py  test_femap_converter_electric.py  test_femap_converter_field_plot_cache.py  test_femap_parser.py  test_femap_to_vtm.py  test_femap_to_vtu.py  test_field_plot_builder_dialog.py  test_file_viewers_emsolution_json.py  test_gui_add_figure.py  test_gui_launch.py  test_gui_path_resolution.py  test_lazy_imports.py  test_main_window_settings.py  test_markdown_viewer_dialogs.py  test_monaco_lsp_breadcrumbs.py  test_monaco_python_semantic_tokens.py  test_plotter_animation_toolbar.py  test_plotter_render_camera.py  test_runner_logging.py  test_scalar_bar_range_dialog.py  test_settings_manager.py  test_source_to_femap.py  test_source_to_femap_dialog.py  test_update_checker.py
tools/: build_windows_private_runtime.py  launcher.c
(+435 files in other folders)
