[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0.0", "numpy>=1.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyemsi"
dynamic = ["version"]
description = "Python tools EMSolution output visualization"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "SSIL"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "vtk>=9.0.0",
    "numpy>=1.21.0",
    "pyvista[full]>=0.43.0",
    "pyvistaqt>=0.11.0",
    "PySide6>=6.5.0",
    "matplotlib>=3.5.0",
    "qtconsole>=5.4.0",
    "ipykernel>=6.0.0",
    "markdown>=3.4.0",
    "python-lsp-server[websockets]",
    "basedpyright>=1.31.4",
    "scienceplots",
    "gmsh",
]

[project.optional-dependencies]
jupyter = [
    "pyvista[jupyter]>=0.43.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "Cython>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/EMSolution-SSIL/pyemsi"
Repository = "https://github.com/EMSolution-SSIL/pyemsi"
Issues = "https://github.com/EMSolution-SSIL/pyemsi/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["pyemsi*"]

[tool.setuptools.dynamic]
version = {attr = "pyemsi.__version__"}

[tool.setuptools.package-data]
"pyemsi.examples" = [
    "*.pvd",
    "ipm_motor/*.vtm",
    "ipm_motor/*/*.vtu",
    "transient/*.vtm",
    "transient/*/*.vtu",
]
"pyemsi.resources" = [
    "*.qrc",
    "icons/*.svg",
]
"pyemsi.widgets.monaco_lsp" = [
    "index.html",
    "grammars/*",
    "grammars/**/*",
    "monaco-editor/*",
    "monaco-editor/**/*",
]
"pyemsi.widgets.xterm" = [
    "index.html",
    "xterm-js/*",
    "xterm-js/**/*",
]

[tool.ruff]
line-length = 120

[tool.pyemsi.windows-private-runtime]
app_module = "pyemsi.gui"
extra_dependencies = ["pywinpty"]

# cibuildwheel configuration
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux_*"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-build = "pip install cython numpy"

[tool.cibuildwheel.macos]
before-build = "pip install cython numpy"

[tool.cibuildwheel.windows]
before-build = "pip install cython numpy"
